--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
@@ -51,39 +55,4 @@ body {
 	border: none;
 	font-size: 16px;
 	cursor: pointer;
-}
-
-/* AlbumList.css */
-.album-container {
-	max-width: 800px;
-	margin: 0 auto;
-	padding: 20px;
-}
-
-.album-grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: 20px;
-}
-
-.album-card {
-	background-color: #f9f9f9;
-	border-radius: 8px;
-	overflow: hidden;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	transition: transform 0.3s ease;
-}
-
-.album-card:hover {
-	transform: translateY(-5px);
-}
-
-.album-info p {
-	padding: 15px;
-	color: #535bf2;
-}
-
-.album-info h2 {
-	margin: 0;
-	font-size: 18px;
 }
